# renewal_model_dj

./: LICENSE  README.md  cp_vs_ncp.qmd  dirty.qmd  pyproject.toml  stan_m1.qmd  template4stan.qmd  workflow.qmd
data/: README.md  datagen.py  datagen_he_CA_120.py  observation_signals.json  plot_synthetic_180.py
data/synth_hosp_ed_189/: daily_ed_visits.csv
data/synthetic_CA_120/: daily_ed_visits.csv  true_parameters.json
python/: dj_paper_lr.py  renewal_rw.py  util.py  util_renewal.py
stan/: atemporal.stan  data_blocks.stan  renewal_m1.stan  simple_rw_3p.stan  simple_rw_3p_nc.stan  simple_rw_3p_v2.stan  solve_growth_rate.stan
