[project]
name = "renewal-model-dj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arviz>=1.0.0",
    "cmdstanpy>=1.3.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jax>=0.9.2",
    "jupyterlab>=4.5.6",
    "jupytext>=1.18.1",
    "plotnine>=0.15.3",
    "polars>=1.39.3",
]
